--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,5 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript", "standard", "plugin:tailwindcss/recommended",  "prettier", "prettier/@typescript-eslint"]
+  "extends":[
+    "@rocketseat/eslint-config/next"
+  ]
 }
